# killnode

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  deleter.rs  main.rs  scanner.rs
src/ui/: deleting.rs  done.rs  list.rs  mod.rs  scanning.rs  welcome.rs
